// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItem: should render icon 1`] = `
<div
  className="root"
>
  <div
    className="listItemIcon"
  >
    <Education icon />
  </div>
  <div
    className="listItemBody"
  >
    <Text
      baseline={false}
      className="listItemTitle"
      intimate={true}
      light={true}
      regular={false}
    >
      testTitle
    </Text>
    <div
      className="listItemValue"
    >
      <Text
        baseline={false}
        className="displayInline"
        loud={true}
        strong={true}
        waving={false}
      >
        testValue
      </Text>
    </div>
  </div>
</div>
`;

exports[`ListItem: should render icon in compact mode 1`] = `
<div
  className="root"
>
  <div
    className="listItemIcon"
  >
    <Education icon />
  </div>
  <div
    className="listItemBody"
  >
    <Text
      baseline={false}
      className="listItemTitle"
      intimate={true}
      light={false}
      regular={true}
    >
      testTitle
    </Text>
    <div
      className="listItemValue"
    >
      <Text
        baseline={false}
        className="displayInline"
        loud={false}
        strong={true}
        waving={true}
      >
        testValue
      </Text>
    </div>
  </div>
</div>
`;

exports[`ListItem: should render icon in hasHoverState mode 1`] = `
<div
  className="root hasHoverState"
>
  <div
    className="listItemIcon"
  >
    <Education icon />
  </div>
  <div
    className="listItemBody"
  >
    <Text
      baseline={false}
      className="listItemTitle"
      intimate={true}
      light={true}
      regular={false}
    >
      testTitle
    </Text>
    <div
      className="listItemValue"
    >
      <Text
        baseline={false}
        className="displayInline"
        loud={true}
        strong={true}
        waving={false}
      >
        testValue
      </Text>
    </div>
  </div>
</div>
`;

exports[`ListItem: should render icon with badge with hasHoverState and compact mode 1`] = `
<div
  className="root hasHoverState"
>
  <div
    className="listItemIcon"
  >
    <Education icon />
  </div>
  <div
    className="listItemBody"
  >
    <Text
      baseline={false}
      className="listItemTitle"
      intimate={true}
      light={false}
      regular={true}
    >
      testTitle
    </Text>
    <div
      className="listItemValue"
    >
      <Text
        baseline={false}
        className="displayInline"
        loud={false}
        strong={true}
        waving={true}
      >
        testValue
      </Text>
      <span
        className="listItemBadge"
      >
        <Badge
          color="default"
          isBold={true}
          label="badge"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`ListItem: should render title value 1`] = `
<div
  className="root"
>
  <div
    className="listItemBody"
  >
    <Text
      baseline={false}
      className="listItemTitle"
      intimate={true}
      light={true}
      regular={false}
    >
      testTitle
    </Text>
    <div
      className="listItemValue"
    >
      <Text
        baseline={false}
        className="displayInline"
        loud={true}
        strong={true}
        waving={false}
      >
        testValue
      </Text>
    </div>
  </div>
</div>
`;

exports[`ListItem: should render value 1`] = `
<div
  className="root"
>
  <div
    className="listItemBody"
  >
    <div
      className="listItemValue"
    >
      <Text
        baseline={false}
        className="displayInline"
        loud={true}
        strong={true}
        waving={false}
      >
        testValue
      </Text>
    </div>
  </div>
</div>
`;
